# kalshi-app

./: .gitignore  backtest.py  conn_syr_test.py  pyproject.toml
data/: 2025-09-08_candlesticks.parquet  2025-09-08_history.parquet  2025-09-08_markets.parquet  2025-09-09_history.parquet
src/: charts.py
src/app/: app.py
src/flows/: __main__.py  deploy.sh  get_open_markets_flow.py  get_settled_markets_dataset.py  open_markets_flow.py
src/flows/sql/: create_markets.sql  merge_markets.sql
src/shared/: database.py  kalshi.py
